First release: sign in with email link

--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="bg-gray-100">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Rapidfire</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/rapidfire.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
+    <link
+      integrity=""
+      rel="stylesheet"
+      href="{{rootURL}}assets/rapidfire.css"
+    />
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body class="">
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
